--- a/Pipfile
+++ b/Pipfile
@@ -20,4 +20,5 @@ allow_prereleases = true
 
 [scripts]
 test = "python3 -m unittest discover"
-lint = "flake8 dict_zip tests"
+lint = "flake8 dict_zip tests && mypy dict_zip"
+generate_typestub = "sh -c 'python ./generate_type_stub.py | tee dict_zip/__init__.pyi && black dict_zip/__init__.pyi'"
