--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,6 @@
 {
-  "pipenv": {
-    "enabled": true
-  }
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    "github>kitsuyui/renovate-config"
+  ]
 }
