--- a/Pipfile
+++ b/Pipfile
@@ -13,12 +13,11 @@ black = "*"
 [packages]
 
 [requires]
-python_version = "3.7"
 
 [pipenv]
 allow_prereleases = true
 
 [scripts]
 test = "python3 -m unittest discover"
-lint = "flake8 dict_zip tests && mypy dict_zip"
+lint = "sh -c 'flake8 dict_zip tests && mypy dict_zip'"
 generate_typestub = "sh -c 'python ./generate_type_stub.py | tee dict_zip/__init__.pyi && black dict_zip/__init__.pyi'"
