set minimum python version to 3.7

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ classifiers =
 [options]
 packages = dict_zip
 test_suite = tests
+python_requires = >= 3.7
 
 [options.package_data]
 * = README.md, LICENSE
