--- a/.github/workflows/python-coverage.yml
+++ b/.github/workflows/python-coverage.yml
@@ -2,7 +2,7 @@ name: Code coverage
 
 on: [pull_request]
 jobs:
-  lint:
+  coverage:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -22,12 +22,12 @@ jobs:
       - name: Run Test
         run: |
           pipenv run coverage run -m unittest discover
-          pipenv run coverage report -m
+          pipenv run coverage xml
 
       - uses: codecov/codecov-action@v2
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./.coverage
+          files: ./coverage.xml
           flags: unittests
           name: codecov-umbrella
           fail_ci_if_error: true
