--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -30,7 +30,8 @@ jobs:
           python3 setup.py check
 
       - name: Publish distribution to Test PyPI
-        uses: pypa/gh-action-pypi-publish@master && github.event.release.prerelease
+        uses: pypa/gh-action-pypi-publish@master
+        if: github.event_name == 'release' && github.event.release.prerelease
         with:
           user: __token__
           password: ${{ secrets.TEST_PYPI_API_TOKEN }}
