--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -26,8 +26,8 @@ jobs:
 
       - name: Build
         run: |
-          python3 setup.py sdist --formats=zip
-          python3 setup.py check
+          pipenv run python3 -m build .
+          pipenv run python3 -m pip install dist/*.whl
 
       - name: Publish distribution to Test PyPI
         uses: pypa/gh-action-pypi-publish@master
