Simplify GitHub Actions

--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -11,18 +11,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install pipenv
-        run: pipx install pipenv
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: "3.x"
           cache: "pipenv"
-          architecture: "x64"
 
-      - name: Install dependencies
-        run: pipenv sync --dev
+      - run: pipx install pipenv
+
+      - run: pipenv sync --dev
 
       - name: Build
         run: |
