--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,10 @@ url = https://github.com/kitsuyui/dict_zip
 classifiers =
     Development Status :: 3 - Alpha
     License :: OSI Approved :: BSD License
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Intended Audience :: Developers
     Topic :: Software Development :: Libraries
 
