Use license_files. license_file is deprecated.

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ description = zip and zip_longest for dict
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = BSD-3-Clause
-license_file = LICENSE
+license_files = LICENSE
 url = https://github.com/kitsuyui/dict_zip
 classifiers =
     Development Status :: 3 - Alpha
