--- a/Pipfile
+++ b/Pipfile
@@ -24,6 +24,6 @@ allow_prereleases = true
 
 [scripts]
 test = "sh -c 'pytest tests --doctest-modules && mypy tests/test_types.py'"
-lint = "sh -c 'flake8 dict_zip tests && mypy dict_zip'"
+lint = "sh -c 'flake8 dict_zip tests && mypy dict_zip tests'"
 coverage = "pytest --cov=dict_zip tests --doctest-modules"
 generate_typestub = "sh -c 'python ./generate_type_stub.py | tee dict_zip/__init__.pyi && isort dict_zip/__init__.pyi && black dict_zip/__init__.pyi'"
