--- a/.editorconfig
+++ b/.editorconfig
@@ -5,3 +5,6 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 charset = utf-8
+
+[{Makefile,**.mk}]
+indent_style = tab
