Add Makefile command build and clean

--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,8 @@ typing-extensions = "*"
 allow_prereleases = true
 
 [scripts]
+build = "make build"
+clean = "make clean"
 test = "make test"
 lint = "make lint"
 format = "make format"
