--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -38,5 +38,5 @@ jobs:
 
       - name: Packaging
         run: |
-          pipenv run python3 -m build .
+          pipenv run build
           ./test_installation.sh
