--- a/Pipfile
+++ b/Pipfile
@@ -29,3 +29,4 @@ lint = "make lint"
 format = "make format"
 cover = "make coverage"
 generate_type_stub = "make generate_type_stub"
+test_install = "make test_install"
