--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -6,13 +6,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: ["3.7", "3.8", "3.9", "3.10"]
+        python: ["3.7", "3.8", "3.9", "3.10"]
     steps:
       - uses: actions/checkout@v3
 
       - uses: actions/setup-python@v4
         with:
-          python-version: "${{ matrix.node }}"
+          python-version: "${{ matrix.python }}"
           cache: "pipenv"
 
       - run: pipx install pipenv
@@ -26,7 +26,7 @@ jobs:
         run: pipenv run test
 
       - name: Upload coverage report to Codecov
-        if: matrix.node-version == '3.10'
+        if: matrix.python == '3.10'
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
