Add dev-dependencies importlib-metadata for Python 3.7
https://github.com/python/importlib_metadata/issues/406

--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ build = "*"
 setuptools-scm = "*"
 typing-extensions = "*"
 pyupgrade = "*"
+importlib-metadata = {version = "*", python = "<3.8"}
 
 [packages]
 
