--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: ["3.7", "3.8", "3.9", "3.10"]
+        python: ["3.7", "3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - name: Checkout
@@ -58,7 +58,7 @@ jobs:
         run: pipenv run pytest --cov=dict_zip tests --doctest-modules --cov-report=xml
 
       - name: Upload coverage report to Codecov
-        if: matrix.python == '3.10'
+        if: matrix.python == '3.11'
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
