Migrate to uv from poetry
- Use https://github.com/astral-sh/uv

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -19,34 +19,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        id: setup-python
-        uses: actions/setup-python@v5
+      - name: Enable caching
+        uses: astral-sh/setup-uv@v5
         with:
-          python-version: "${{ matrix.python }}"
-
-      - name: Set up poetry
-        uses: abatilo/actions-poetry@v4
-
-      - name: Cache
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ runner.os }}-build-${{ matrix.python }}-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ matrix.python }}-${{ hashFiles('**/poetry.lock') }}
-            ${{ runner.os }}-build-${{ matrix.python }}-
-            ${{ runner.os }}-
+          enable-cache: true
 
       - name: Install dependencies
-        run: poetry install
+        run: uv sync
 
       - name: Lint
-        run: poetry run poe check
+        run: uv run poe check
 
       - name: Check Python version
         run: |
-          actual_version=$(poetry run python --version)
+          actual_version=$(uv run python --version)
           expected_version="Python ${{ matrix.python }}"
           if [ "$actual_version" == *"$expected_version"* ]; then
             echo "Expected $expected_version, but got $actual_version"
@@ -54,10 +40,10 @@ jobs:
           fi
 
       - name: Test
-        run: poetry run poe test
+        run: uv run poe test
 
       - name: Coverage
-        run: poetry run poe coverage-xml
+        run: uv run poe coverage-xml
 
       - name: Upload coverage report to Codecov
         if: matrix.python == '3.13'
