Migrate to uv (2)
- Remove pypa/build from dev-dependencies (Use uv build)
- Set dynamic = ["version"] in pyproject.toml (Override version with setuptools_scm)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "dict_zip"
-version = "0.0.0"
+dynamic = ["version"]
 requires-python = ">=3.9"
 dependencies = []
 description = "ip and zip_longest for dict"
@@ -29,7 +29,6 @@ dev-dependencies = [
     "pytest-cov",
     "poethepoet",
     "setuptools-scm",
-    "build",
     "ruff",
     "mypy",
 ]
@@ -57,7 +56,6 @@ check = [
     { cmd = "ruff check dict_zip tests" },
     { cmd = "mypy dict_zip tests" },
 ]
-build = [{ cmd = "python -m build" }]
 
 [tool.mypy]
 # https://mypy.readthedocs.io/en/latest/config_file.html
