Update to uv (3)
- ignore .python-version file

--- a/.gitignore
+++ b/.gitignore
@@ -249,3 +249,5 @@ cython_debug/
 #.idea/
 # -----------------------------------------------------------------------------
 _version.py
+# -----------------------------------------------------------------------------
+.python-version
